<?xml version="1.0" encoding="utf-8"?>

<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ui.fragment.MainFragment">

<androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/user_logo"
            android:layout_margin="10dp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            tools:text = "Test test"
            app:layout_constraintTop_toTopOf="@+id/user_logo"
            app:layout_constraintBottom_toTopOf="@+id/user_type"
            app:layout_constraintLeft_toRightOf="@+id/user_logo"/>

    <TextView
            android:id="@+id/user_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            tools:text = "Guest"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:layout_constraintBottom_toBottomOf="@+id/user_logo"
            app:layout_constraintLeft_toRightOf="@+id/user_logo"/>

    <Button
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/logout_btn_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/in_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/user_logo"
            app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
            android:id="@+id/out_sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/user_logo"
            app:layout_constraintRight_toRightOf="parent"/>

    <androidx.constraintlayout.widget.Barrier
            android:id="@+id/header_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="in_sum,out_sum" />

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/header_barrier"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/footer_barrier"/>

    <androidx.constraintlayout.widget.Barrier
            android:id="@+id/footer_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="top"
            app:constraint_referenced_ids="start_btn,stop_btn,drop_btn" />

    <Button
            android:id="@+id/start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/start_btn_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/stop_btn"/>

    <Button
            android:id="@+id/stop_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/stop_btn_title"
            app:layout_constraintLeft_toRightOf="@+id/start_btn"
            app:layout_constraintRight_toLeftOf="@+id/drop_btn"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
            android:id="@+id/drop_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/drop_btn_title"
            app:layout_constraintLeft_toRightOf="@+id/stop_btn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>